--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adonisjs/ally",
-  "version": "2.1.7",
+  "version": "2.2.0",
   "description": "Social authenticator for AdonisJs Framework",
   "main": "index.js",
   "files": [
@@ -61,7 +61,7 @@
     "debug": "^4.0.1",
     "got": "8.3.2",
     "lodash": "^4.17.11",
-    "oauth": "^0.9.15",
+    "oauth": "Pickaw/node-oauth",
     "uuid": "^3.3.2"
   },
   "repository": {
